# project-nebula

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.sh
requests/: login.http  register.http  roles.http  token.http  user_management.http
src/: main.py
src/schemas/: connection.py  role.py  user.py
src/social_connections/: social_connections.py
src/users/: auth.py  login.py  register.py  user_management.py
src/utils/: initialize_db.py  password.py
src/weather/: weather.py
